--- a/index.html
+++ b/index.html
@@ -7,8 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Template Naive UI</title>
   </head>
+  <style>
+    .app {
+      margin: 0 !important;
+      padding: 0 !important;
+    }
+  </style>
   <body>
-    <div id="app"></div>
+    <div id="app" class="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
